                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 26-02-2006 changed: lowres decoding kicked in on 720p xvid files. limit changed to a width of 1400 from 1280 pixels
 - 26-02-2006 fixed: [ 1454103 ] dts frames with uneven size would play garbled when passed through in both dvdplayer and mplayer
 - 26-02-2006 fixed: dvdplayer, DVD-subtitles remain enabled after disabling them
 - 26-02-2006 fixed: changing subtitles in mplayer when having ttf subtitles, could cause subtitles to become invisible
 - 26-02-2006 added: ability to abort mplayer while it is parsing of vobsubs
 - 26-02-2006 changed: added subtitle/audio stream numberering to osd, easier to see when having multiple English for example
 - 25-03-2006 fixed: slow opening of some dvd images due to css caching directory having to long name
 - 25-03-2006 changed: CFileCURL files will now write in smaller chunks and have less chance of overwriting buffer, also Stat/Exist should now work for http urls. (no knowledge about dir thou)
 - 25-03-2006 fixed: Nonexistent thumbs and overlays would be searched for every frame.
 - 25-03-2006 fixed: bug in mplayer subtitle selection (more of a workaround).
 - 24-03-2006 fixed: Optimized xbmcGetCurrentlyPlaying() a bit, and changed sleep in xbmcCommand() from 100 to 10ms.
 - 24-03-2006 fixed: browsed subtitles would show up in wrong places.
 - 24-03-2006 fixed: icons for shares, dvd label update, dvd button in my programs.
 - 23-03-2006 fixed: dvdplayer would play out of sync for files with completly wrong frame rate in container. 5 < pts < 100 is considered valid